# my_project

./: db.sqlite3  pyproject.toml
core/: settings.py
