[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Tatsuya Ohara <tohara.220@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
